# ebadge_ota

./: .gitattributes  .gitignore  ARCHITECTURE.md  BUILD_GUIDE.md  CMakeLists.txt  HARDWARE.md  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  WINDOWS_QUICK_START.md  build_all.bat  build_all.sh  build_all_simple.bat  build_and_flash_launcher.bat  build_and_flash_pacman.bat  build_frogger.bat  build_launcher.bat  build_launcher_4mb.bat  build_pacman.bat  build_tetris.bat  clean_builds.bat  fix_display.bat  flash_all_games.bat  flash_frogger.bat  flash_games_only.bat  flash_launcher_com8.bat  flash_launcher_com8_simple.bat  flash_launcher_simple.sh  flash_launcher_wsl.sh  flash_rgb_test.sh  manifest.json.example  monitor_com8.bat  monitor_launcher.bat  partitions.csv  rebuild_flash_launcher.bat  reset_boot_launcher.bat  sdkconfig.defaults  simple_ota_server.py
Apps/: README.md
Apps/frogger/: CMakeLists.txt  README.md  build.sh  flash.sh
Apps/frogger/main/: CMakeLists.txt  frogger_game.c  frogger_game.h  frogger_main.c  lcd_driver.c
Apps/game_launcher/: CMakeLists.txt  README.md  build.sh  flash.sh  partitions.csv  sdkconfig.defaults
Apps/pacman/: CMakeLists.txt  README.md  build.sh  flash.sh
Apps/tetris/: CMakeLists.txt  README.md  build.sh  flash.sh  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  lcd_test.c  ota_loader_main.c  ota_manager.c  ota_manager.h  provisioning.c  provisioning.h  rgb_led_test.c  usb_recovery.c  usb_recovery.h  wifi_manager.c  wifi_manager.h
scripts/: build.sh  flash.sh  flash_monitor.sh  monitor.sh
(+14 files in other folders)
